@@ -40,10 +40,6 @@ called first.  The functions take a grob and axis argument. ")
     
      (align-dir ,ly:dir? "Which side to align? @code{-1}: left side,
 @code{0}: around center of width, @code{1}: right side.")
-     (arch-angle ,number? "Turning angle of the hook of a system brace" )
-     (arch-height ,ly:dimension? "Height of the hook of a system brace.")
-     (arch-thick ,number? "Thickness of the hook of system brace.")
-     (arch-width ,ly:dimension? "Width of the hook of a system brace.")
      (arpeggio-direction ,ly:dir? "If set, put an
 arrow on the arpeggio squiggly line.")
   
@@ -94,7 +90,6 @@ potential line breaks.")
      (bracket-flare ,number-pair? "A pair of numbers specifying how
 much edges of brackets should slant outward.  Value 0.0 means straight
 edges")
-     (bracket-thick ,number? "width of a system start bracket.")
      (break-align-symbol ,symbol? "This key is used for aligning and
 spacing breakable items.")
      (break-align-orders ,vector? " Defines the order in which
